--- a/daythaynguyenvv4/src/main/resources/application.properties
+++ b/daythaynguyenvv4/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=daythaynguyenvv4
+
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
