--- a/sd19308sof3022/src/main/resources/application.properties
+++ b/sd19308sof3022/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=sd19308sof3022
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD19308;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.jpa.show-sql=true
