--- a/sd19301sof3022/src/main/resources/application.properties
+++ b/sd19301sof3022/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=sd19301sof3022
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD19301;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.jpa.show-sql=true
