--- a/sd20102sof203/pom.xml
+++ b/sd20102sof203/pom.xml
@@ -52,6 +52,11 @@
             <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>11.2.3.jre17</version>
+        </dependency>
     </dependencies>
 
     <build>
