--- a/sd19308sof3022/src/main/resources/application.properties
+++ b/sd19308sof3022/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD19308;encry
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.jpa.show-sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
